[package]
name = "libtransport-tcp"
version = "0.0.4"
authors = ["Samuel Marks <@SamuelMarks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.0"
libcommon-rs = { git = "https://github.com/Fantom-foundation/libcommon-rs" }
libtransport = { git = "https://github.com/Fantom-foundation/libtransport" }
serde = "1.0.101"
serde_derive = "1.0.101"
buffer = "0.1.8"
log = "0.4.8"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
